Improve Leaf syntax highlighting

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   ],
   "keywords": [
     "vapor",
+    "leaf",
     "swift",
     "server",
-    "web",
     "framework"
   ],
+  "preview": true,
   "activationEvents": [
     "onLanguage:swift",
     "workspaceContains:Package.swift"
