Improve Leaf code folding

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -17,7 +17,7 @@
     ],
     "folding": {
         "markers": {
-            "start": "#.+:",
+            "start": "#(?!else:|elseif\\().+:",
             "end": "#end.+"
         }
     }
