--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,5 +1,7 @@
 .vscode/**
 .vscode-test/**
+node_modules
+out/**
 src/**
 .gitignore
 .yarnrc
@@ -9,3 +11,4 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
+**/esbuild.js
