Fix gallery banner

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "Vapor",
   "icon": "images/icon.png",
   "galleryBanner": {
-    "color": "#C80000",
+    "color": "#CE4BF3",
     "theme": "dark"
   },
   "repository": {
