--- a/package.json
+++ b/package.json
@@ -157,7 +157,8 @@
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
     "vscode:prepublish": "npm run package",
-    "package": "npm run check-types && node esbuild.js --production"
+    "package": "npm run check-types && node esbuild.js --production",
+    "coverage": "vscode-test --coverage"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
