Add Leaf formatter (#1)
* Add Leaf formatter

* Fix Leaf snippet

* Add code coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,12 @@ jobs:
       if: runner.os == 'Linux'
     - run: npm test
       if: runner.os != 'Linux'
+    # This will not fail the job if tests fail so we have to npm test separately
+    - run: xvfb-run -a npm run coverage
+      if: runner.os == 'Linux'
+    - run: npm run coverage
+      if: runner.os != 'Linux'
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
