--- a/package.json
+++ b/package.json
@@ -148,21 +148,19 @@
       }
     ]
   },
-  "extensionDependencies": [
-    "swiftlang.swift-vscode"
-  ],
   "scripts": {
     "compile-tests": "tsc -p . --outDir out",
-    "pretest": "npm run compile-tests && npm run lint",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test",
-    "compile": "npm run check-types && node esbuild.js",
+    "compile": "npm run check-types && npm run lint && node esbuild.js",
     "check-types": "tsc --noEmit",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
     "vscode:prepublish": "npm run package",
-    "package": "npm run check-types && node esbuild.js --production",
+    "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "coverage": "vscode-test --coverage --coverage-reporter json"
   },
   "devDependencies": {
