--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "coverage": "vscode-test --coverage --coverage-reporter json"
   },
   "devDependencies": {
+    "@types/js-beautify": "^1.14.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.96.2",
@@ -196,6 +197,6 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "html-format": "^1.1.7"
+    "js-beautify": "^1.15.4"
   }
 }
